--- a/src/markdown.css
+++ b/src/markdown.css
@@ -2,6 +2,10 @@
   padding: 0;
 }
 
+.prose {
+  letter-spacing: 2px;
+}
+
 .prose .shiki {
   font-family: 'DM Mono', monospace;
   font-size: 1.2em;
@@ -29,7 +33,8 @@ html:not(.dark) .shiki-dark {
   display: none;
 }
 
-h2 {
+h2,
+h3 {
   margin: 0.5em 0;
 }
 
@@ -40,4 +45,30 @@ p a {
 
 p a:hover {
   border-color: var(--color-text-1);
+}
+
+.prose :not(pre) > code {
+  background-color: var(--tag-bgc-color);
+  padding: 0.2em;
+  border-radius: 4px;
+}
+
+.prose blockquote {
+  background-color: var(--tip-bgc-color);
+  padding: 0 0.5em;
+  border-radius: 2px;
+  margin: 0.5em 0 1em;
+}
+
+.prose blockquote ul,
+ol {
+  padding-left: 2em;
+}
+
+a.cc-link {
+  color: var(--a-link-color);
+}
+
+a.cc-link:hover {
+  text-decoration: underline;
 }
