chore: update styles

--- a/src/assets/scss/theme.scss
+++ b/src/assets/scss/theme.scss
@@ -8,7 +8,7 @@
   --color-white: #fff;
   --tag-bgc-color: #f6f6f7;
   --tip-bgc-color: #f3f4f5;
-  --a-link-color: #5bab70;
+  --a-link-color: #04c994;
 }
 
 :root.dark {
@@ -20,7 +20,7 @@
   --color-text-3: rgba(255, 255, 255, 0.5);
   --tag-bgc-color: #313136;
   --tip-bgc-color: #202229;
-  --a-link-color: #86dfba;
+  --a-link-color: #03C988;
 }
 
 html {
