--- a/src/assets/scss/theme.scss
+++ b/src/assets/scss/theme.scss
@@ -13,14 +13,14 @@
 
 :root.dark {
   --text-color: #e5eaf3;
-  --bg-color: #141414;
+  --bg-color: #1e1e1f;
   // text color dark
   --color-text-1: rgba(255, 255, 255, 0.9);
   --color-text-2: rgba(255, 255, 255, 0.7);
   --color-text-3: rgba(255, 255, 255, 0.5);
   --tag-bgc-color: #313136;
   --tip-bgc-color: #202229;
-  --a-link-color: #03C988;
+  --a-link-color: #03c988;
 }
 
 html {
