--- a/src/assets/scss/theme.scss
+++ b/src/assets/scss/theme.scss
@@ -5,8 +5,11 @@
   --color-text-1: #141414;
   --color-text-2: #5c5c5c;
   --color-text-3: #909399;
+
+
   --color-white: #fff;
   --tag-bgc-color: #f6f6f7;
+  --tag-color: #e4e5e8;
   --tip-bgc-color: #f3f4f5;
   --a-link-color: #04c994;
 }
@@ -19,6 +22,7 @@
   --color-text-2: rgba(255, 255, 255, 0.7);
   --color-text-3: rgba(255, 255, 255, 0.5);
   --tag-bgc-color: #313136;
+  --tag-color: #5c5c5c;
   --tip-bgc-color: #202229;
   --a-link-color: #03c988;
 }
