--- a/src/main.scss
+++ b/src/main.scss
@@ -66,9 +66,9 @@ html:not(.dark) .shiki-dark {
 
   .shiki-container {
     & > pre {
-      padding: 0.5em 1em;
+      padding: 1rem;
       border-radius: 0.5rem;
-      margin: 0 0 0.5em;
+      margin: 0 0 1rem;
     }
 
     @at-root {
