--- a/src/assets/scss/theme.scss
+++ b/src/assets/scss/theme.scss
@@ -1,39 +1,44 @@
 :root {
-  --text-color: #303133;
-  --bg-color: #ffffff;
+  --bg-color: #fff;
   // text color
-  --color-text-1: #141414;
-  --color-text-2: #5c5c5c;
+  --color-text-1: rgb(15, 23, 42);
+  --color-text-2: rgb(51, 65, 85);
   --color-text-3: #909399;
 
   --color-white: #fff;
   --tag-bgc-color: #f6f6f7;
-  --tag-color: #e4e5e8;
-  --tip-bgc-color: #f3f4f5;
+  --tag-color: rgba(0, 93, 199, 0.05);
   --a-link-color: #04c994;
 
   --project-bgc: rgba(245, 245, 245, 0.8);
 }
 
 :root.dark {
-  --text-color: #e5eaf3;
-  --bg-color: #1e1e1f;
+  --bg-color: rgba(17, 17, 17, 1);
   // text color dark
-  --color-text-1: rgba(255, 255, 255, 0.9);
-  --color-text-2: rgba(255, 255, 255, 0.7);
+  --color-text-1: rgb(241, 245, 249); // 强调色
+  --color-text-2: rgb(226, 232, 240); // 普通文本色
   --color-text-3: rgba(255, 255, 255, 0.5);
   --tag-bgc-color: #313136;
-  --tag-color: #5c5c5c;
-  --tip-bgc-color: #202229;
+  --tag-color: rgba(255, 255, 255, 0.1); // code 背景颜色
   --a-link-color: #03c988;
   --project-bgc: rgba(43, 43, 45, 0.8);
 }
 
 html {
-  color: var(--text-color);
+  color: var(--color-text-2);
 }
 
 body {
   background-color: var(--bg-color);
   transition: background-color 0.18s;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: var(--color-text-1);
 }
