--- a/plugins/markdown-it-code-copy.scss
+++ b/plugins/markdown-it-code-copy.scss
@@ -25,7 +25,7 @@
   position: absolute;
   right: 1rem;
   top: 0.5rem;
-  opacity: 0;
+  opacity: 1;
   outline-offset: 2px;
   outline: 2px solid transparent;
   cursor: pointer;
@@ -43,5 +43,24 @@
   svg {
     padding: 0.375rem;
     vertical-align: middle;
+    &:nth-child(1) {
+      opacity: 1;
+    }
+    &:nth-child(2) {
+      position: absolute;
+      left: 0;
+      opacity: 0;
+    }
+  }
+
+  &.copy-btn-copied {
+    svg {
+      &:nth-child(1) {
+        opacity: 0;
+      }
+      &:nth-child(2) {
+        opacity: 1;
+      }
+    }
   }
 }
