--- a/src/main.scss
+++ b/src/main.scss
@@ -48,6 +48,7 @@ html:not(.dark) .shiki-dark {
 
   img {
     width: 100%;
+    margin-top: 0.5rem;
   }
 
   table {
@@ -61,20 +62,23 @@ html:not(.dark) .shiki-dark {
   .shiki-container {
     margin-top: 1rem;
 
-    & > pre {
+    &>pre {
       padding: 1rem;
       border-radius: 0.5rem;
       margin: 0 0 1rem;
     }
 
     @at-root {
-      .shiki-container > pre {
+      .shiki-container>pre {
         padding: 1em;
       }
     }
   }
 
-  & :not(pre) > code {
+
+
+  & :not(pre)>code {
+    white-space: pre;
     padding: 0.2rem 0.25rem;
     border-radius: 0.3rem;
     background-color: var(--tag-color);
@@ -99,7 +103,7 @@ p {
   margin: 0.5em 0 0;
   line-height: 2rem;
 
-  & + p {
+  &+p {
     margin: 0;
   }
 
