--- a/src/assets/scss/theme.scss
+++ b/src/assets/scss/theme.scss
@@ -10,6 +10,7 @@
   --tag-color: rgba(0, 93, 199, 0.1);
   --a-link-color: #04c994;
 
+  --divider-color: rgba(60, 60, 67, 0.12);
   --project-bgc: rgba(245, 245, 245, 0.8);
 }
 
@@ -22,6 +23,8 @@
   --tag-bgc-color: #313136;
   --tag-color: rgba(255, 255, 255, 0.1); // code 背景颜色
   --a-link-color: #03c988;
+
+  --divider-color: rgba(82, 82, 89, 0.32);
   --project-bgc: rgba(43, 43, 45, 0.8);
 }
 
