chore: support image preview

--- a/src/assets/pages/introduce.scss
+++ b/src/assets/pages/introduce.scss
@@ -1,4 +1,5 @@
 .introduce-text {
+  text-align: center;
   font-size: 1.2rem;
   line-height: 2;
   background: linear-gradient(to right, #ff847c, #ff6666);
