--- a/src/assets/pages/layout.scss
+++ b/src/assets/pages/layout.scss
@@ -45,3 +45,10 @@
     display: none;
   }
 }
+
+.cc-footer__link {
+  transition: color 0.3s;
+  &:hover {
+    color: var(--color-text-1);
+  }
+}
