feat: add go back tag

--- a/src/assets/pages/layout.scss
+++ b/src/assets/pages/layout.scss
@@ -46,3 +46,16 @@
     display: none;
   }
 }
+
+.cc-back {
+  color: var(--color-text-3);
+  transition: all 0.3s;
+  &:hover {
+    color: var(--color-text-1);
+  }
+
+  & > div {
+    cursor: pointer;
+    display: inline-block;
+  }
+}
