--- a/src/main.scss
+++ b/src/main.scss
@@ -3,7 +3,10 @@
 }
 
 html {
-  font-family: Inter, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", Segoe UI Symbol, "Noto Color Emoji";
+  font-family: Inter, ui-sans-serif, system-ui, -apple-system,
+    BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans,
+    sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', Segoe UI Symbol,
+    'Noto Color Emoji';
 }
 
 html.dark {
@@ -63,20 +66,20 @@ html:not(.dark) .shiki-dark {
   .shiki-container {
     margin-top: 1rem;
 
-    &>pre {
+    & > pre {
       padding: 1rem;
       border-radius: 0.5rem;
       margin: 0 0 1rem;
     }
 
     @at-root {
-      .shiki-container>pre {
+      .shiki-container > pre {
         padding: 1em;
       }
     }
   }
 
-  & :not(pre)>code {
+  & :not(pre) > code {
     padding: 0.2rem 0.25rem;
     border-radius: 0.3rem;
     background-color: var(--tag-color);
@@ -102,7 +105,7 @@ p {
   margin: 0.5em 0 0;
   line-height: 2rem;
 
-  &+p {
+  & + p {
     margin: 0;
   }
 
