--- a/src/main.scss
+++ b/src/main.scss
@@ -61,12 +61,12 @@ html:not(.dark) .shiki-dark {
   }
 
   .shiki-container {
-    margin-top: 1rem;
+    margin-top: 0.5em;
 
     & > pre {
       padding: 1rem;
       border-radius: 0.5rem;
-      margin: 0 0 1rem;
+      // margin: 0 0 0.5em;
     }
 
     @at-root {
@@ -79,11 +79,6 @@ html:not(.dark) .shiki-dark {
   & :not(pre) > code {
     color: var(--color-text-1);
 
-    &::after,
-    &::before {
-      content: '`';
-    }
-
     // padding: 0.1em;
     // border-radius: 0.3rem;
     // background-color: var(--tag-color);
@@ -92,10 +87,15 @@ html:not(.dark) .shiki-dark {
 
   blockquote {
     background-color: var(--tag-color);
-    padding: 1em;
-    border-radius: 0.5rem;
+    padding: 0.3em 1em;
     margin: 1em 0;
     overflow: hidden;
+    background: linear-gradient(
+      to right,
+      var(--tag-color) 5px,
+      transparent 6px,
+      transparent 100%
+    );
 
     & > p {
       margin: 0;
@@ -114,13 +114,9 @@ ol {
 }
 
 p {
-  // margin: 1.25em 0;
+  margin: 1.25em 0;
   line-height: 1.75;
   text-align: justify;
-
-  & + p {
-    margin: 0;
-  }
 }
 
 a {
@@ -147,19 +143,19 @@ h1 {
 h2 {
   font-size: 1.75rem;
   line-height: 2rem;
-  margin: 1rem 0 0;
+  margin: 3rem 0 2rem;
 }
 
 h3 {
   font-size: 1.5rem;
   line-height: 1.75rem;
-  margin: 1rem 0 0;
+  margin: 2.5rem 0 1.5rem;
 }
 
 h4 {
   font-size: 1.25rem;
   line-height: 1.5rem;
-  margin: 1rem 0 0;
+  margin: 2rem 0 1rem;
 }
 
 h5 {
