--- a/src/assets/scss/theme.scss
+++ b/src/assets/scss/theme.scss
@@ -1,5 +1,5 @@
 :root {
-  --bg-color: #fff;
+  --bg-color: rgb(248, 248, 250);
   // text color
   --color-text-1: #191919;
   --color-text-2: #6d6c6c;
@@ -14,6 +14,8 @@
   --project-bgc: rgba(245, 245, 245, 0.8);
 
   --shadow-1: rgb(229, 230, 235);
+
+  --shadow-1-active: rgb(220, 223, 230);
 }
 
 :root.dark {
@@ -31,6 +33,8 @@
   --project-bgc: rgba(43, 43, 45, 0.8);
 
   --shadow-1: rgb(72, 72, 73);
+
+  --shadow-1-active: rgb(80, 80, 80);
 }
 
 html {
