--- a/src/assets/scss/var/variable.scss
+++ b/src/assets/scss/var/variable.scss
@@ -1,1 +1,5 @@
-$prefixCls: cc;
+$namespace: cc !default;
+$common-separator: '-' !default;
+$element-separator: '__' !default;
+$modifier-separator: '--' !default;
+$is-at-root: true !default;
