--- a/src/main.scss
+++ b/src/main.scss
@@ -121,6 +121,7 @@ p {
 
 a {
   transition: color 0.3s;
+
   &:hover {
     color: var(--color-text-1);
   }
@@ -162,4 +163,14 @@ h5 {
   font-size: 1rem;
   line-height: 1.25rem;
   margin-top: 1rem 0 0;
+}
+
+.prose {
+  min-height: 55vh;
+
+  ul,
+  li {
+    margin: 0;
+    padding: 0;
+  }
 }
